<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view"
            type="com.app.eroum.shufflepwapp.IdentityInputActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/input_info_for_identity_verification"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:paddingTop="48dp"
            android:paddingBottom="48dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:divider="@drawable/empty_16"
                android:orientation="vertical"
                android:showDividers="middle">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/confirmButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="48dp"
                    android:onClick="@{() -> view.onClickDone()}"
                    android:paddingEnd="48dp"
                    android:text="@string/input_complete"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneLayout"
                    style="@style/Widget.App.TextInputLayout.Clear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneEdit"
                        style="@style/Widget.App.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="11"
                        tools:text="010323305869" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/telecomLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="통신사"
                        android:textSize="12sp"
                        tools:ignore="HardcodedText" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/telecomChipGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:chipSpacingHorizontal="8dp"
                        app:selectionRequired="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/sktChip"
                            style="@style/Widget.App.ChoiceChip"
                            android:tag="01"
                            android:text="@string/skt" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/ktChip"
                            style="@style/Widget.App.ChoiceChip"
                            android:tag="02"
                            android:text="@string/kt" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/lgChip"
                            style="@style/Widget.App.ChoiceChip"
                            android:tag="03"
                            android:text="@string/lg_u_plus" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/cheapSktChip"
                            style="@style/Widget.App.ChoiceChip"
                            android:tag="04"
                            android:text="@string/skt_discount" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/cheapKtChip"
                            style="@style/Widget.App.ChoiceChip"
                            android:tag="05"
                            android:text="@string/kt_discount" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/cheapLgChip"
                            style="@style/Widget.App.ChoiceChip"
                            android:tag="06"
                            android:text="@string/lg_u_plus_discount" />
                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/genderLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="성별"
                        android:textSize="12sp"
                        tools:ignore="HardcodedText" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/genderChipGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:chipSpacingHorizontal="8dp"
                        app:selectionRequired="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/maleChip"
                            style="@style/Widget.App.ChoiceChip"
                            android:tag="01"
                            android:text="@string/male" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/femaleChip"
                            style="@style/Widget.App.ChoiceChip"
                            android:tag="02"
                            android:text="@string/female" />

                    </com.google.android.material.chip.ChipGroup>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/birthdayLayout"
                    style="@style/Widget.App.TextInputLayout.Clear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/birthdayEdit"
                        style="@style/Widget.App.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="생년월일"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="8"
                        tools:text="19870302" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameLayout"
                    style="@style/Widget.App.TextInputLayout.Clear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEdit"
                        style="@style/Widget.App.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="이름"
                        android:imeOptions="actionNext"
                        tools:text="이름" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>